Changelog
---------

v8.1.1:
 Project changes:
 SportsTracker changes:
 ExerciseViewer changes:
 Translations:

v8.1.0:
 Project changes:
 - updated JDK for build and packaging to version 25 LTS (Temurin JDK)
 - updated Java language level to version 25
 - updated JavaFX / OpenJFX to version 25
 - updated Kotlin to version 2.2.20
 - updated ControlsFX to version 11.2.2
 - updated JFreeChart to version 1.5.6 and JFreeChart-FX to 2.0.2
 - updated sqlite-jdbc to version 3.50.3.0
 - updated commons-cli to version 1.10.0
 - updated JUnit to version 6.0.0
 - updated Mockito to version 5.20.0
 SportsTracker changes:
 - Statistics can be created easily from any entry (e.g. Exercise or Note) by
   using the action "Statistics since Entry"
 - Notes can now be created for specific sport types and equipments
 - User can now easily track the maintenance periods when creating equipment-
   specific notes and creating statistics since that note entry
   (e.g. ridden distance since chain replacement on bike X)
 - Filter Dialog: Sport type and Equipment can be set for filtering Note
   entries
 - Removed the obsolete XMLStorage implementation
   - also removed all schema files, tests, etc.
   - Users who need to migrate user data from XML to SQLite need to use
     SportsTracker version 8.0.x for migration and can update ST afterwards
 ExerciseViewer changes:
 - updated Garmin FIT SDK library to version 21.171.0
   - provides support for newer Garmin devices
 Translations:
  - updated spanish translation provided by Luis Llorente Campo
    <luisllorente (at) luisllorente (dot) com>

v8.0.2:
 Project changes:
 - updated Kotlin to version 2.1.0 (faster project build time)
 - updated JavaFX / OpenJFX to version 23.0.1
 - updated ControlsFX to version 11.2.1
 - updated commons-cli to version 1.9.0
 - updated sqlite-jdbc to version 3.47.1.0
 - updated JUnit to version 5.11.4
 - updated Mockito to version 5.14.2
 SportsTracker changes: